--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       <div class="collapse navbar-collapse " id="nav">
         <ul class="navbar-nav ms-auto">
-           <li class="nav-item"> <a href="nike2.html" class="nav-link"> Log-in</a></li>
-           <li class="nav-item"> <a href="nike.html" class="nav-link">sign up </a></li>
+           <li class="nav-item"> <a href="index2.html" class="nav-link"> Log-in</a></li>
+           <li class="nav-item"> <a href="index.html" class="nav-link">sign up </a></li>
         </ul>
       </div>  
       </div>
@@ -71,4 +71,5 @@
 
     <script src="bootstrap.js"></script>
 </body>
+
 </html>
