--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                      
                      <button class="btn btn-outline-dark w-100 mb-3">SUBMIT</button>
                 </div>
-                <p>Already have an account? <a class="text-decoration-none " href="nike2.html">Login</a></p>
+                <p>Already have an account? <a class="text-decoration-none " href="index2.html">Login</a></p>
             </form>
              
         </div>
@@ -73,3 +73,4 @@
 </body>
 
 </html>
+
